Fix "end" layout horizontal alignment

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -123,6 +123,7 @@ body {
   background-position: right bottom;
   background-size: 400px;
   text-align: left !important;
+  place-content: center start !important;
 }
 
 .slidev-layout.end h1 {
